# sonic-utilities

./: .bazelrc  BUILD.bazel  MODULE.bazel
testdata/: dist.expected.txt  libs_dist.expected.txt  pkg_data.expected.txt
